# profitability

./: .gitignore  Dockerfile  README.md  configs.py  main.py  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml
clients/: cryptocurrency_client.py  models.py
services/: cryptocurrency_service.py  stock_service.py
src/: configs.py  handlers.py  main.py
src/clients/: cryptocurrency_client.py  models.py  stock_client.py
src/database/: database.py
src/telegram_bot/: telegram_bot.py  texts.py  utils.py
src/utils/: http_client.py
